--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=backend
+
+# MySQL Conection
+spring.datasource.url=jdbc:mysql://localhost:3306/bd_jarquin
+spring.datasource.username=conexion
+spring.datasource.password=Wk2!rT8s@6w
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Initial route
+server.servlet.context-path=/api
