--- a/jarquin_frontend/package.json
+++ b/jarquin_frontend/package.json
@@ -12,9 +12,16 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.4.1",
     "@mui/material": "^6.4.1",
+    "@mui/x-date-pickers": "^7.24.0",
+    "axios": "^1.7.9",
+    "dayjs": "^1.11.13",
+    "material-react-table": "^3.1.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router": "^7.1.3",
+    "sweetalert2": "^11.15.10"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
