--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=backend
 # MySQL Conection
 spring.datasource.url=jdbc:mysql://localhost:3306/bd_jarquin
 spring.datasource.username=conexion
-spring.datasource.password=Wk2!rT8s@6w
+spring.datasource.password=CS_TEST123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Initial route
